--- a/source/dialogs/create-new-zone/create-new-zone-modal.html
+++ b/source/dialogs/create-new-zone/create-new-zone-modal.html
@@ -42,20 +42,33 @@
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="name">Foreground:</label>
                             <div class="col-sm-9">
-                                <button ng-click="wiModal.foregroundZone($index);" ng-style="{background: wiModal.zone.fill.pattern.foreground}" class="form-control wi-form-control width-80px height-20px thick-border">
+                                <button ng-click="wiModal.foregroundZone();" 
+                                        ng-style="{background: wiModal.zone.fill.pattern.foreground}" 
+                                        class="form-control wi-form-control thick-border" style="width: 103px; height: 26px">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="name">Background:</label>
                             <div class="col-sm-9">
-                                <button ng-click="wiModal.backgroundZone($index);" ng-style="{background: wiModal.zone.fill.pattern.background}" class="form-control wi-form-control width-80px height-20px thick-border">
+                                <button ng-click="wiModal.backgroundZone();" 
+                                        ng-style="{background: wiModal.zone.fill.pattern.background}" 
+                                        class="form-control wi-form-control thick-border" style="width: 103px; height: 26px">
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="control-label col-sm-3">Pattern</label>
                             <div class="col-sm-9">
-                                <ui-select theme="bootstrap" ng-model="wiModal.zone.fill.pattern.name">
+                                <button ng-click="wiModal.choosePattern()"
+                                        class="btn btn-default padding-0 thick-border">
+                                    <wi-canvas-rect name="_selectedPatternCanvas" 
+                                                pattern="{{wiModal.zone.fill.pattern.name}}" 
+                                                width="100" height="26" 
+                                                foreground="{{wiModal.zone.fill.pattern.foreground}}"
+                                                background='{{wiModal.zone.fill.pattern.background}}'>
+                                    </wi-canvas-rect>
+                                </button>
+                                <!-- <ui-select theme="bootstrap" ng-model="wiModal.zone.fill.pattern.name">
                                     <ui-select-match>
                                         <wi-canvas-rect name="row_{{$index}}" pattern="{{wiModal.zone.fill.pattern.name}}" width="250" height="20">
                                         </wi-canvas-rect>
@@ -67,7 +80,7 @@
                                             </wi-canvas-rect>
                                         </div>
                                     </ui-select-choices>
-                                </ui-select>
+                                </ui-select> -->
                             </div>
                         </div>
                     </form>
