--- a/source/dialogs/fill-pattern/fill-pattern-modal.html
+++ b/source/dialogs/fill-pattern/fill-pattern-modal.html
@@ -12,7 +12,8 @@
                             <div style='background-color:white;border:none;display: flex;padding-top: 2px;padding-bottom: 2px; padding-left: 8px;'>
                                 <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
                                 <input type='text' id="focus" 
-                                        style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;'        ng-model="wiModal.filter">
+                                        style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;'
+                                        ng-model="wiModal.filter">
                             </div>
                             <div style="height: 400px;overflow-y: overlay;display:flex;" class="list-pattern-style">
                                 <wi-scroll id-scroll='"__patternScroll"' style='flex:1;display:flex;flex-direction:column;' up-trigger="wiModal.upTrigger" down-trigger='wiModal.downTrigger' animation-timeout="0">
