--- a/source/dialogs/share-project/share-project-modal.html
+++ b/source/dialogs/share-project/share-project-modal.html
@@ -8,96 +8,54 @@
                 <h4>Advance Sharing Project : {{wiModal.project.name}}</h4>
             </div>
             <div class="modal-body">
-                <style>
-                    .list-body {
-                        flex: 1;
-                    }
-
-                    .list-group {
-                        max-height: calc(35%);
-                        overflow: auto;
-                    }
-
-                    .list-group-item {
-                        cursor: pointer;
-                    }
-
-                    .list-group-item.active {
-                        background-color: #cccccc;
-                    }
-
-                    .list-group-item:hover {
-                        background-color: #f0f0f0;
-                    }
-
-                    .list-user {
-
-                    }
-
-                </style>
-                <div style="display: flex">
-                    <div style="flex:1; margin: 0 5px;">
-                        <h4 style="text-align: center">User's Groups</h4>
-                        <ul class="list-group">
-                            <li ng-repeat="group in wiModal.groups"
-                                ng-click="wiModal.groupClicked(group)"
-                                class="list-group-item"
-                                ng-class="{active: group.idGroup==wiModal.selectedGroup.idGroup}"
-                                style="display: flex; padding: 3px 15px">
-                                <span style="flex: 1; line-height: 36px; ">{{group.name}}</span>
-                                <button class="btn btn-default btn-sm pull-right margin-right-0_5em"
-                                        title="Share to this group" ng-click="wiModal.shareProjectToGroup(group)"
-                                        ng-show="!group.isShared">
-                                    <i class="apply-16x16"></i>
-                                </button>
-                                <button class="btn btn-default btn-sm pull-right margin-right-0_5em"
-                                        title="Unshare this group" ng-click="wiModal.unShareProjectFromGroup(group)"
-                                        ng-show="group.isShared">
-                                    <i class="exit-16x16"></i>
-                                </button>
-
-                                <button class="btn btn-default pull-right" title="Delete this group"
-                                        ng-click="wiModal.deleteGroup(group)" ng-disabled="!group.canDelete">
-                                    <i class="delete-16x16"></i>
-                                </button>
-                            </li>
-                        </ul>
-                        <button class="btn btn-default display-block text-ellipsis float-left"
-                                style="margin-bottom:5px; margin-right: 5px;"
-                                ng-click="wiModal.addNewGroup()"
-                                ng-disabled="false">
-                            <i class="plus-16x16"></i>
-                            <span>Add new group</span>
-                        </button>
-                    </div>
-                    <div style="flex:1; margin: 0 5px;">
-                        <h4 style="text-align: center">User in group</h4>
-                        <div class="list-body">
-                            <ul class="list-group">
-                                <li ng-repeat="user in wiModal.users" class="list-group-item" ng-click="wiModal.userClicked(user)"
-                                    style="display: flex; padding: 3px 15px"><span
-                                        style="flex: 1; line-height: 36px; ">{{user.username}}</span>
-                                    <button class="btn btn-default pull-right"
-                                            title="Add user to group {{wiModal.selectedGroup.name}}"
-                                            ng-click="wiModal.addUser(user)"
-                                            ng-show="!user.isShared && wiModal.selectedGroup && wiModal.selectedGroup.canDelete">
-                                        <i class="apply-16x16"></i>
-                                    </button>
-                                    <button class="btn btn-default pull-right"
-                                            title="Remove user from group {{wiModal.selectedGroup.name}}"
-                                            ng-click="wiModal.removeUser(user)"
-                                            ng-show="user.isShared && wiModal.selectedGroup && wiModal.selectedGroup.canDelete">
-                                        <i class="exit-16x16"></i>
-                                    </button>
-                                </li>
-                            </ul>
+                <div style="display: flex; height: 40%">
+                    <div style="flex:1; margin: 0 5px;display: flex;flex-direction:column;height: 90%;margin-bottom:0;">
+                        <h4 style="text-align: center">Groups</h4>
+                        <div style='background-color:white;border:none;display: flex;padding-top: 2px;padding-bottom: 2px; padding-left: 8px;'>
+                            <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
+                            <input type='text' id="focus" 
+                                    style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;' 
+                                    ng-model="wiModal.grFilter">
                         </div>
+                        <wi-scroll id-scroll="'groupTreeScroll'" style='flex:1;display:flex;flex-direction:column;'
+                                    class="list-scroll"
+                                    up-trigger='wiModal.upTriggerGroup' down-trigger='wiModal.downTriggerGroup'>
+                            <wi-base-treeview
+                                        name="_group"
+                                        container="wiModal"
+                                        config="wiModal.groupsConfig"
+                                        on-click-function='wiModal.groupClicked'
+                                        filter="{{wiModal.grFilter}}">
+                            </wi-base-treeview>
+                        </wi-scroll>
+                    </div>
+                    <div style="flex:1; margin: 0 5px; display: flex;flex-direction:column;height: 90%;margin-bottom:0;">
+                        <h4 style="text-align: center">Users in {{wiModal.selectGroupNode.name}}</h4>
+                        <div style='background-color:white;border:none;display: flex;padding-top: 2px;padding-bottom: 2px; padding-left: 8px;'>
+                            <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
+                            <input type='text' id="focus" 
+                                    style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;' 
+                                    ng-model="wiModal.uFilter">
+                        </div>
+                        <wi-scroll id-scroll="'userTreeScroll'" style='flex:1;display:flex;flex-direction:column;'
+                                    class="list-scroll"
+                                up-trigger='wiModal.upTriggerUser' down-trigger='wiModal.downTriggerUser'>
+                            <wi-base-treeview
+                                        name="_user"
+                                        container="wiModal"
+                                        config="wiModal.usersConfig"
+                                        filter="{{wiModal.uFilter}}">
+                            </wi-base-treeview>
+                        </wi-scroll>
                     </div>
                 </div>
                 <hr/>
-                <div style="display: flex" ng-show="wiModal.objects">
-                    <div style="flex:1; margin: 0 5px;">
-                        <ul class="list-group">
+                <div style="display: flex; height: 25%; border: 1px solid #ccc; ">
+                    <div style="width: 100%; text-align: center; padding: 4em;" ng-show="!wiModal.objects">
+                        <p style="font-weight: bold; color: #ccc; font-size: 3em">NO INFORMATION</p>
+                    </div>
+                    <div style="flex:1; overflow-y: overlay;" ng-show="wiModal.objects">
+                        <ul class="list-group" style="margin-bottom: 0">
                             <li ng-repeat="object in wiModal.objects" class="list-group-item"
                                 style="display: flex; padding: 3px 15px"><span style="flex: 1; line-height: 36px; ">{{object.displayAs}}</span>
                                 <span style="padding: inherit">
