--- a/source/dialogs/share-project/share-project-modal.html
+++ b/source/dialogs/share-project/share-project-modal.html
@@ -1,3 +1,35 @@
+<style>
+    /* .list-group li:nth-child(odd) {
+        background: #eee;
+    };
+    .list-body {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        padding: 5px;
+    }
+    .list-body wi-scroll .scroll-container {
+        border: 1px solid #ccc;
+        border-top: none;
+    }  */
+    .text-heading {
+        color: #428bca;
+        font-size: 15px;
+        font-style: italic;
+        margin-bottom: 0;
+    }
+    .isShared {
+        color: blue;
+    } 
+    .isNotShared {
+        color: #eee;
+    }
+    ::-webkit-input-placeholder {
+       color: #ccc;
+       font-style: italic;
+    }
+</style>
 <div class='modal fade' data-backdrop="static" data-keyboard="false">
     <div class='modal-dialog modal-lg'>
         <div class="modal-content">
@@ -23,17 +55,18 @@
                             </div> -->
                             
                         </div>
-                        <div style='background-color:white;border:none;display: flex;padding-left: 7px; border: 1px solid #a9a9a9'>
+                        <div style='background-color:white;display: flex;padding-left: 7px; border: 1px solid #ccc'>
                             <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
                             <input type='text' id="focus" 
                                     style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;border: none' 
-                                    ng-model="wiModal.grFilter">
+                                    ng-model="wiModal.grFilter"
+                                    placeholder="[Search]">
                             <div class='filter-block' ng-init="wiModal.fb=true" style="float: right;">
                                 <div class="filter-main" style="width: 45px;">
-                                    <label class="btn" ng-class='{checkFilter: wiModal.fb==true}' title='Active Group'>
+                                    <label class="btn" title='View Sharing Groups'>
                                         <input type="checkbox" class="display-none" ng-model="wiModal.fb"
                                                 ng-change="wiModal.onFilterBy()">
-                                        <span class='ti-check'></span>
+                                        <span class='ti-check isShared'></span>
                                     </label>
                                 </div>
                             </div>
@@ -56,11 +89,12 @@
                         <div class="panel-heading" style="padding: 0">
                             <p style="float: left;" class="text-heading">Users in: <span style="font-weight: bold">{{wiModal.selectGroupNode.name}}</span></p>
                         </div>
-                        <div style='background-color:white;border:none;display: flex;padding-left: 7px;'>
+                        <div style='background-color:white;display: flex;padding-left: 7px; border: 1px solid #ccc'>
                             <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
                             <input type='text' id="focus" 
-                                    style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;' 
-                                    ng-model="wiModal.uFilter">
+                                    style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue; border: none' 
+                                    ng-model="wiModal.uFilter"
+                                    placeholder="[Search]">
                         </div>
                         <wi-scroll id-scroll="'userTreeScroll'" style='flex:1;display:flex;flex-direction:column;'
                                     class="list-scroll"
@@ -75,7 +109,7 @@
                     </div>
                 </div>
                 <p style="padding-left: 5px" class="text-heading">Permission</p>
-                <div style="display: flex; height: 25%; border: 1px solid #A9A9A9; margin: 0 5px; border-radius: 5px;">
+                <div style="display: flex; height: 25%; border: 1px solid #ccc; margin: 0 5px; border-radius: 5px;">
                     <div style="width: 100%; text-align: center; padding: 4em;" ng-show="!wiModal.objects">
                         <p style="font-weight: bold; color: #ccc; font-size: 3em">NO INFORMATION</p>
                     </div>
