--- a/source/dialogs/create-new-zone/create-new-zone-modal.html
+++ b/source/dialogs/create-new-zone/create-new-zone-modal.html
@@ -13,16 +13,16 @@
                     &times;
                 </button>
                 <h4 class="modal-title">
-                    <span class="user-define-16x16"></span>&nbsp;New Zone Set</h4>
+                    <span class="user-define-16x16"></span>&nbsp;Create new zone</h4>
             </div>
             <div class="modal-body">
                 <div class="">
                     <h5 class="modal-infomation-title">
-                        <span class="user-define-16x16"></span>&nbsp;Zone Set
+                        <span class="user-define-16x16"></span>&nbsp;Zone
                     </h5>
                     <form class="form-horizontal" action="" name="modalNewProject">
                         <div class="form-group">
-                            <label class="control-label col-sm-3" for="name">Zone Set name:</label>
+                            <label class="control-label col-sm-3" for="name">Zone name:</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" ng-model="wiModal.zone.name" required>
                             </div>
