--- a/source/dialogs/create-new-zone-set/create-new-zone-set-modal.html
+++ b/source/dialogs/create-new-zone-set/create-new-zone-set-modal.html
@@ -13,16 +13,16 @@
                     &times;
                 </button>
                 <h4 class="modal-title">
-                    <span class="user-define-16x16"></span>&nbsp;New Zone Set</h4>
+                    <span class="user-define-16x16"></span>&nbsp;Create new zoneset</h4>
             </div>
             <div class="modal-body">
                 <div class="">
                     <h5 class="modal-infomation-title">
-                        <span class="user-define-16x16"></span>&nbsp;Zone Set
+                        <span class="user-define-16x16"></span>&nbsp;Zoneset
                     </h5>
                     <form class="form-horizontal" action="" name="modalNewProject">
                         <div class="form-group">
-                            <label class="control-label col-sm-3" for="name">Zone Set name:</label>
+                            <label class="control-label col-sm-3" for="name">Zoneset name:</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" ng-model="wiModal.zoneSet.name" required>
                             </div>
@@ -30,30 +30,24 @@
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="name">Background:</label>
                             <div class="col-sm-9">
-                                <button ng-click="wiModal.backgroundZone();" 
-                                        ng-style="{background: wiModal.zoneSet.background}" 
-                                        class="form-control wi-form-control thick-border" style="width: 103px; height: 26px">
+                                <button ng-click="wiModal.backgroundZone();" ng-style="{background: wiModal.zoneSet.background}" class="form-control wi-form-control thick-border"
+                                    style="width: 103px; height: 26px">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="name">Foreground:</label>
                             <div class="col-sm-9">
-                                <button ng-click="wiModal.foregroundZone();" 
-                                        ng-style="{background: wiModal.zoneSet.foreground}" 
-                                        class="form-control wi-form-control thick-border" style="width: 103px; height: 26px">
+                                <button ng-click="wiModal.foregroundZone();" ng-style="{background: wiModal.zoneSet.foreground}" class="form-control wi-form-control thick-border"
+                                    style="width: 103px; height: 26px">
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="control-label col-sm-3">Pattern</label>
                             <div class="col-sm-9">
-                                <button ng-click="wiModal.choosePattern()"
-                                        class="btn btn-default padding-0 thick-border">
-                                    <wi-canvas-rect name="_selectedPatternCanvas" 
-                                                pattern="{{wiModal.zoneSet.pattern}}" 
-                                                width="100" height="26" 
-                                                foreground="{{wiModal.zoneSet.foreground}}"
-                                                background='{{wiModal.zoneSet.background}}'>
+                                <button ng-click="wiModal.choosePattern()" class="btn btn-default padding-0 thick-border">
+                                    <wi-canvas-rect name="_selectedPatternCanvas" pattern="{{wiModal.zoneSet.pattern}}" width="100" height="26" foreground="{{wiModal.zoneSet.foreground}}"
+                                        background='{{wiModal.zoneSet.background}}'>
                                     </wi-canvas-rect>
                                 </button>
                                 <!-- <ui-select theme="bootstrap" ng-model="wiModal.zoneSet.pattern">
@@ -69,6 +63,13 @@
                                         </div>
                                     </ui-select-choices>
                                 </ui-select> -->
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-3">Description</label>
+                            <div class="col-sm-9">
+                                <textarea class="form-control ng-pristine ng-untouched ng-valid ng-empty" rows="8" value="" id="zonedescription" name="description"
+                                    ng-model="wiModal.zoneSet.description" style="resize:none"></textarea>
                             </div>
                         </div>
                     </form>
