--- a/source/dialogs/create-new-zone/create-new-zone-modal.html
+++ b/source/dialogs/create-new-zone/create-new-zone-modal.html
@@ -1,9 +1,8 @@
 <div class="modal fade" data-backdrop="static" data-keyboard="false">
     <style>
-        .ui-select-choices {
-            position: fixed;
-            top: auto;
-            left: auto;
+        canvas {
+            width: 100%;
+            height: 26px;
         }
     </style>
     <div class="modal-dialog">
@@ -36,31 +35,32 @@
                         <hr>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="name">Zone name:</label>
-                            <div class="col-sm-5">
+                            <div class="col-sm-4">
                                 <input type="text" class="form-control" ng-model="wiModal.zone.name" required>
                             </div>
+                            <div class="col-sm-1"></div>
                             <div class="col-sm-4" style="text-align: right;">
                                 <button class="btn btn-default display-block width-100-percent text-ellipis" ng-click="wiModal.chooseTemplate()">Choose Template</button>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="name">Foreground:</label>
-                            <div class="col-sm-9">
+                            <div class="col-sm-4">
                                 <button ng-click="wiModal.foregroundZone();" ng-style="{background: wiModal.zone.fill.pattern.foreground}" class="form-control wi-form-control thick-border"
-                                    style="width: 103px; height: 26px">
+                                    style="width: 100%; height: 26px">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="name">Background:</label>
-                            <div class="col-sm-9">
+                            <div class="col-sm-4">
                                 <button ng-click="wiModal.backgroundZone();" ng-style="{background: wiModal.zone.fill.pattern.background}" class="form-control wi-form-control thick-border"
-                                    style="width: 103px; height: 26px">
+                                    style="width: 100%; height: 26px">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3">Pattern</label>
-                            <div class="col-sm-9">
-                                <button ng-click="wiModal.choosePattern()" class="btn btn-default padding-0 thick-border">
+                            <div class="col-sm-4">
+                                <button ng-click="wiModal.choosePattern()" class="btn btn-default padding-0 thick-border" style="width:100%">
                                     <wi-canvas-rect name="_selectedPatternCanvas" pattern="{{wiModal.zone.fill.pattern.name}}" width="100" height="26" foreground="{{wiModal.zone.fill.pattern.foreground}}"
                                         background='{{wiModal.zone.fill.pattern.background}}'>
                                     </wi-canvas-rect>
