--- a/source/html/index.html
+++ b/source/html/index.html
@@ -116,7 +116,7 @@
     <script src="vendor/js/toastr.min.js"></script>
     <script type="text/javascript" src="vendor/js/angular-wizard.min.js"></script>
     <script src="vendor/js/handsontable.full.min.js"></script>
-    <!-- <script src="js/chat-module.bundle.js"></script> -->
+    <script src="js/chat-module.bundle.js"></script>
     <script src="js/main.js.bundle.js"></script>
 
     <!-- Insert this line after script imports -->
@@ -154,7 +154,7 @@
             <i class="fa fa-caret-right" aria-hidden="true" id="nextBtn" title="Next"></i>
         </div>
     </template>
-    <!-- <chat-module></chat-module> -->
+    <chat-module></chat-module>
     <div id="testElement"></div>
 </body>
 
