--- a/source/html/index.html
+++ b/source/html/index.html
@@ -116,7 +116,7 @@
     <script src="vendor/js/toastr.min.js"></script>
     <script type="text/javascript" src="vendor/js/angular-wizard.min.js"></script>
     <script src="vendor/js/handsontable.full.min.js"></script>
-    <script src="js/chat-module.bundle.js"></script>
+    <script src="vendor/js/chat-module.webpack.js"></script>
     <script src="js/main.js.bundle.js"></script>
 
     <!-- Insert this line after script imports -->
