--- a/source/html/index.html
+++ b/source/html/index.html
@@ -45,6 +45,7 @@
     <link href='css/wi-reference-window.css' rel='stylesheet'>
     <link href='css/wi-multi-input.css' rel='stylesheet'>
     <link href='css/wi-custom-input.css' rel='stylesheet'>
+    <!-- <link rel="stylesheet" href="css/wi-props-panel.css"/> -->
 
     <link rel="stylesheet" href="css/wi-comboview.css">
     <link rel="stylesheet" href="css/wi-d3-comboview.css">
@@ -67,6 +68,9 @@
     <link rel="stylesheet" href="css/wi-multiselect.css">
     <link rel="stylesheet" href="css/wi-condition-node.css">
     <link rel="stylesheet" href="css/wi-workflow.css">
+    <link rel="stylesheet" href="css/wi-flow-designer.css"/>
+    <link rel="stylesheet" href="vendor/css/diagram-js.css"/>
+    <link rel="stylesheet" href="vendor/css/bpmn.css"/>
     <link rel="stylesheet" href="css/wii-explorer.css">
     <link rel="stylesheet" href="css/wii-items.css">
     <link rel="stylesheet" href="css/wii-properties.css">
@@ -75,7 +79,7 @@
     <link href='css/main.css' rel='stylesheet'>
     <link href='css/wi-zone-template-manager.css' rel='stylesheet'>
     <link href='css/wi-zone-set-manager.css' rel='stylesheet'>
-    
+
     <!-- Insert this line above script imports  -->
     <script>
         if (typeof module === 'object') {
