fix bug backdrop

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -146,7 +146,8 @@
     </template>
 
     <template id='property-block'>
-        <wi-properties name="WiProperties" list-config="myPropertiesConfig"></wi-properties>
+        <!-- <wi-properties name="WiProperties" list-config="myPropertiesConfig"></wi-properties> -->
+        <wi-props input="myPropertiesConfig" translation="labelConfig" option="optionConfig"></wi-props>
     </template>
     <template id="stack-header-control">
         <div class="stack-header-control">
