--- a/source/html/index.html
+++ b/source/html/index.html
@@ -150,8 +150,8 @@
     </template>
 
     <template id='property-block'>
-        <!-- <wi-properties name="WiProperties" list-config="myPropertiesConfig"></wi-properties> -->
-        <wi-props input="myPropertiesConfig" translation="labelConfig" option="optionConfig"></wi-props>
+        <wi-properties name="WiProperties" list-config="myPropertiesConfig"></wi-properties>
+        <!-- <wi-props input="myPropertiesConfig" translation="labelConfig" option="optionConfig"></wi-props> -->
     </template>
     <template id="stack-header-control">
         <div class="stack-header-control">
