--- a/source/dialogs/open-flow/open-flow-modal.html
+++ b/source/dialogs/open-flow/open-flow-modal.html
@@ -11,19 +11,17 @@
                 <div class="form-horizontal">
                     <div class="form-group">
                         <label class="control-label col-sm-3">Flow name:</label>
-                        <wi-item-dropdown class='col-sm-9 height34px position-fixed'
-                            on-wi-dropdown-init="wiModal.getFlowList"
-                            on-item-changed="wiModal.flowChanged"
-                            place-holder="Select flow"
-                            ctrl-btn-icon='fa fa-times-circle line-height-1_5'
-                            on-ctrl-btn-click='wiModal.deleteFlow'>
+                        <wi-item-dropdown class='col-sm-8 height34px position-fixed' on-wi-dropdown-init="wiModal.getFlowList" on-item-changed="wiModal.flowChanged"
+                            place-holder="Select flow" ctrl-btn-icon='fa fa-times-circle line-height-1_5' on-ctrl-btn-click='wiModal.deleteFlow'>
                         </wi-item-dropdown>
+                        <div class="col-sm-1">
+                            <a style="text-decoration: none; cursor: pointer;" ng-click='wiModal.newFlow()' class='fa fa-plus-circle fa-2x'></a>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.close(wiModal.selectedFlow)" class="btn btn-default"
-                ng-disabled="!wiModal.selectedFlow">
+                <button type="button" ng-click="wiModal.close(wiModal.selectedFlow)" class="btn btn-default" ng-disabled="!wiModal.selectedFlow">
                     <span class="ok-16x16"></span>&nbsp;OK
                 </button>
                 <button type="button" class="btn btn-default" ng-click="wiModal.close()">
