update histogram and crossplot modal

--- a/source/dialogs/user-define-line/user-define-line-modal.html
+++ b/source/dialogs/user-define-line/user-define-line-modal.html
@@ -29,7 +29,7 @@
                                         <td>
                                             <input ng-model="udLine.function"
                                             type="text" class="form-control wi-form-control"
-                                            ng-change="onChange()">
+                                            ng-change="wiModal.onChange($index)">
                                         </td>
                                         <td style='width: 20%;'>
                                             <div ng-model="udLine.lineStyle" id="lineStyleSvg"
